--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
   <section class="contact" id="contacto">
     <h3>Contáctanos</h3>
-    <form>
+    <form action="https://formspree.io/f/xyzabcde" method="POST">
       <input type="text" placeholder="Nombre" required>
       <input type="email" placeholder="Correo Electrónico" required>
       <textarea rows="5" placeholder="Mensaje" required></textarea>
