--- a/index.html
+++ b/index.html
@@ -326,10 +326,10 @@
 
   <section class="contact" id="contacto">
     <h3>Contáctanos</h3>
-    <form action="https://formspree.io/f/xyzabcde" method="POST">
-      <input type="text" placeholder="Nombre" required>
-      <input type="email" placeholder="Correo Electrónico" required>
-      <textarea rows="5" placeholder="Mensaje" required></textarea>
+    <form action="https://formspree.io/f/xblyvvdn" method="POST">
+      <input type="text" name="nombre" placeholder="Nombre" required>
+      <input type="email" name="email" placeholder="Correo Electrónico" required>
+      <textarea name="mensaje" rows="5" placeholder="Mensaje" required></textarea>
       <button type="submit">Enviar Mensaje</button>
     </form>
     <p>O envíanos un correo a <strong>mynfcpanels@gmail.com</strong></p>
