--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
     <form action="https://formspree.io/f/xblyvvdn" method="POST">
       <input type="text" name="nombre" placeholder="Nombre" required>
       <input type="email" name="email" placeholder="Correo Electrónico" required>
+      <input type="tel" name="phone" placeholder="Teléfono">
       <textarea name="mensaje" rows="5" placeholder="Mensaje" required></textarea>
       <button type="submit">Enviar Mensaje</button>
     </form>
