--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My NFC Panels</title>
+  <title>NFC Panels</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="IMG/logoNFC1.png">
   <style>
     * {
       margin: 0;
@@ -281,7 +282,7 @@
 </head>
 <body>
   <header>
-    <h1>My NFC Panels</h1>
+    <img src="IMG/logoNFC1.png" alt="My NFC Panels Logo" style="height: 100px;">
     <nav>
       <a href="#productos">Productos</a>
       <a href="#contacto">Contacto</a>
@@ -289,7 +290,7 @@
   </header>
 
   <section class="hero">
-    <h2>Conectividad <span class="gradient-text">Inteligente</span> con My NFC Panels</h2>
+    <h2>Conectividad <span class="gradient-text">Inteligente</span> con NFC Panels</h2>
     <div class="subtitulo">
     <p>Paneles NFC modernos para hoteles y clientes individuales.<br>Tecnología práctica y elegante para una experiencia sin contacto.</p>
     </div>
@@ -354,7 +355,7 @@
   </section>
 
   <footer>
-    &copy; 2025 My NFC Panels. Todos los derechos reservados.
+    &copy; 2025 NFC Panels. Todos los derechos reservados.
   </footer>
 </body>
 </html>
